# autosar-state-management

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  autosar_cpp_settings.xml  doxy_config
.github/workflows/: main.yml
cmake_modules/: CodeCoverage.cmake
doc/: index.html
doc/doxygen/html/: annotated.html  classara_1_1com_1_1NetworkHandle.html  classara_1_1com_1_1TriggerIn.html  classara_1_1com_1_1TriggerInOut.html  classara_1_1com_1_1TriggerOut.html  classara_1_1com_1_1UpdateRequest.html  classara_1_1sm_1_1StateManagement.html  classara_1_1sm_1_1StateManagement__coll__graph.dot  classes.html  classsmTests.html  classsmTests__coll__graph.dot  classsmTests__inherit__graph.dot  contains_8h.html  contains_8h__incl.dot  contains_8h_source.html  dir_000001_000000.html  dir_59425e443f801f1f2fd8bbe4959a3ccf.html  dir_59425e443f801f1f2fd8bbe4959a3ccf_dep.dot  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions.html  functions_enum.html  functions_func.html  functions_vars.html  globals.html  globals_func.html  graph_legend.html  hierarchy.html  index.html  inherit_graph_0.dot  inherit_graph_1.dot  inherit_graph_10.dot  inherit_graph_2.dot  inherit_graph_3.dot  inherit_graph_4.dot  inherit_graph_5.dot  inherit_graph_6.dot  inherit_graph_7.dot  inherit_graph_8.dot  inherit_graph_9.dot  (+31 more)
doc/doxygen/html/search/: all_0.js  all_1.js  all_10.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  enums_0.js  enums_1.js  enums_2.js  enums_3.js  enums_4.js  enumvalues_0.js  files_0.js  files_1.js  files_2.js  files_3.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  (+21 more)
doc/doxygen/latex/: annotated.tex  classara_1_1com_1_1NetworkHandle.tex  classara_1_1com_1_1TriggerIn.tex  classara_1_1com_1_1TriggerInOut.tex  classara_1_1com_1_1TriggerOut.tex  classara_1_1com_1_1UpdateRequest.tex  classara_1_1sm_1_1StateManagement.tex  classara_1_1sm_1_1StateManagement.tex.tmp  classara_1_1sm_1_1StateManagement__coll__graph.dot  classsmTests.tex  classsmTests__coll__graph.dot  classsmTests__inherit__graph.dot  contains_8h.tex  contains_8h__incl.dot  files.tex  hierarchy.tex  index.tex  refman.tex  sm__tests_8h.tex  sm__tests_8h__incl.dot  sm__types_8h.tex  sm__types_8h__dep__incl.dot  sm__types_8h__incl.dot  state__management_8h.tex  state__management_8h__dep__incl.dot  state__management_8h__incl.dot  structara_1_1com_1_1UpdateRequest_1_1RequestMsg.tex  structara_1_1sm_1_1DiagnosticResetMsg.tex  structara_1_1sm_1_1FunctionGroupNameType.tex  structara_1_1sm_1_1PowerModeMsg.tex  trigger__in_8h.tex  trigger__in_8h__dep__incl.dot  trigger__in__out_8h.tex  trigger__in__out_8h__dep__incl.dot  trigger__out_8h.tex  trigger__out_8h__dep__incl.dot  update__request_8h.tex  update__request_8h__dep__incl.dot  update__request_8h__incl.dot
gTests_coverage/: index.html  index.network_handle.cpp.e4a4e8f8db1e2558cafd86bc8b186b4b.html  index.recovery_action.h.7e59792da02c04511cfa2316c408bf50.html  index.sm_tests.h.32a85e8066bb1c70a6026af6a2921a5e.html  index.state_client.cpp.1782b02c9417c101047a4d62421093ec.html  index.state_management.cpp.8f4ba5a6630185777295a44bf3b32120.html  index.test_network_handler.cpp.f5365e8a01fa8c8c04f77707bb4bd689.html  index.test_recovery_action.cpp.4e8bdeb0e7a833372b080d7f88795978.html  index.test_reset_execution.cpp.fec9e0b4cf38f0ebbb45c4c8acc7289c.html  index.test_state_client.cpp.e9a750533b33dd1690f4f8a02ab487fc.html  index.test_trigger_in.cpp.03dbeb19590423af762607463c153c30.html  index.test_trigger_in_out.cpp.ada6394c91f49eda0f3bb3d7385a25c1.html  index.test_trigger_out.cpp.29776e479ffe8765908df55423e7d1da.html  index.tests.cpp.9bf58f20e3af5e9824e78e62931b3bfa.html  index.trigger_in.cpp.3885b43c3dbda855ab37681123818b12.html  index.trigger_in_out.cpp.383b2a307f4aa4b51da01fb8b12e594d.html  index.trigger_out.cpp.fd08991a262dfc561b6407fd079e9883.html  index.update_request.cpp.037516fdff38af7340594e19f59318aa.html
main/: CMakeLists.txt  main.cpp  main_test
src/: CMakeLists.txt  CommunicationGroupServer.cpp  CommunicationGroupServer.h  Employee.cpp  Employee.h  communication_gorup_server.cpp  communication_group_server.h  contains.h  diagnostic_reset.cpp  diagnostic_reset.h  ecu_reset_request.cpp  ecu_reset_request.h  execution_client.cpp  execution_client.h  main.cpp  network_handle.cpp  network_handle.h  power_mode.cpp  power_mode.h  recovery_action.cpp  recovery_action.h  sm_types.h  state_client.cpp  state_client.h  state_management.cpp  state_management.h  trigger_in.cpp  trigger_in.h  trigger_in_out.cpp  trigger_in_out.h  trigger_out.cpp  trigger_out.h  update_request.cpp  update_request.h
tests/: CMakeLists.txt  Employeeee-test.cpp  sm_tests.h  test_Employee.cpp  test_communication_group_server.cpp  test_ecu_reset_request.cpp  test_execution_client.cpp  test_network_handler.cpp  test_recovery_action.cpp  test_reset_execution.cpp  test_state_client.cpp  test_trigger_in.cpp  test_trigger_in_out.cpp  test_trigger_inout.cpp  test_trigger_out.cpp  tests.h  tests_update_request.cpp
tests/mocks/: mock_execution_client.h  mock_state_client.h
